# crawler-kit

./: Dockerfile  Makefile  pyproject.toml
src/: main.py
src/crawler_kit/entrypoints/cli/: __init__.py
src/crawler_kit/entrypoints/cli/pchome/: __init__.py
src/crawler_kit/entrypoints/pubsub/: on_crawling_pchome.py
src/crawler_kit/infrastructure/: __init__.py
src/crawler_kit/infrastructure/converts/png/: to_jpg.py
src/crawler_kit/infrastructure/webdriver/: playwright_manager.py  seleniumbase_manager.py
src/crawler_kit/modules/ebay/application/commands/: crawl_ebay_web.py  ebay_crawler.py  ebay_parser.py  ebay_storage_service.py
src/crawler_kit/modules/ebay/presentation/cli/handlers/: handle_crawl_ebay_web.py
src/crawler_kit/modules/exceptions/: crawling.py  parsing.py  screenshot.py  storage.py
src/crawler_kit/modules/general/dtos/: crawl_result.py
src/crawler_kit/modules/general/enums/: driver_config.py
src/crawler_kit/modules/general/presentation/http/handlers/: handle_dispatch_crawling_job.py
src/crawler_kit/modules/lazada/application/commands/: crawl_lazada_web.py  lazada_crawler.py
src/crawler_kit/modules/pchome/application/commands/: crawl_pchome_web.py  pchome_crawler.py  pchome_parser.py  pchome_storage_service.py
src/crawler_kit/modules/pchome/presentation/cli/handlers/: handle_crawl_pchome_web.py
src/crawler_kit/utils/google_cloud/: credentials_from_env.py  set_object.py
src/crawler_kit/utils/lifespans/: startup.py
