[project]
name = "crawler-kit"
version = "0.1.1"
description = "crawler kit"
requires-python = ">=3.13,<3.14"

dependencies = [
  "httpx",
  "aiohttp",
  "fake-useragent",
  "pybase62",
  "python-dotenv",
  "shortuuid",  
  "Pillow",
]

[project.optional-dependencies]
cloud = [
    "google-cloud-pubsub",
    "google-cloud-run",
    "firebase_functions",
    "firebase-admin",
    "vellox",
]

workflow = [
  "prefect",
]

web = [
  "starlette",
  "asgi-lifespan",
  "uvicorn",
  ]

browser = [
  "pyppeteer",
  "seleniumbase",
  "playwright",
]

cli = [
  "typer",
]

dev = [
  "pytest",
  "pytest-testdox",
  "pytest-dotenv",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
addopts = [
  "-v",
  "-s",
  "--testdox",
  "--capture=no",
  "--tb=long",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::pytest.PytestAssertRewriteWarning",
  "ignore:builtin type SwigPyPacked has no __module__ attribute",
  "ignore:builtin type SwigPyObject has no __module__ attribute",
  "ignore:builtin type swigvarlink has no __module__ attribute",
]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "*.egg",
  "info",
]
python_files = [
  "test_*.py",
]
pythonpath = ["./src"]
